# scrapper-messaging

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
scripts/: reinstall_packages.sh
smoke_tests/: __init__.py  conftest.py  test_type_checking.py
src/scrapper_messaging/: __init__.py  connection.py  connection_test.py  consumer.py  consumer_test.py  json_scrape_request_decoder.py  json_scrape_request_decoder_test.py  queue_config.py  rabbitmq_response_publisher.py  rabbitmq_response_publisher_test.py  scrape_request_decoder_interface.py  scrapper_consumer_config.py  scrapper_service_invoker.py  scrapper_service_invoker_test.py
src/scrapper_messaging/connection/: __init__.py  rabbitmq_connection.py  rabbitmq_connection_test.py
src/scrapper_messaging/consumer/: __init__.py  scrapper_consumer.py  scrapper_consumer_config.py  scrapper_consumer_test.py
src/scrapper_messaging/contracts/: __init__.py  jobs_service_invoker_interface.py  rabbitmq_connection_interface.py  response_publisher_interface.py
src/scrapper_messaging/request_decoder/: __init__.py  json_scrape_request_decoder.py  json_scrape_request_decoder_test.py
src/scrapper_messaging/response_publisher/: __init__.py  rabbitmq_response_publisher.py  rabbitmq_response_publisher_test.py
src/scrapper_messaging/service_invoker/: __init__.py  scrapper_service_invoker.py  scrapper_service_invoker_test.py
tests/: test_consumer.py
