[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-messaging"
version = "0.1.0"
description = "Messaging components for job agent scrapper services"
requires-python = ">=3.9"
dependencies = [
    "job-scrapper-contracts @ git+https://github.com/job-agent/job-scrapper-contracts.git@main",
    "pika>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.14.1",
    "black>=25.9.0",
    "ruff>=0.14.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

