[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-messaging"
version = "0.1.0"
description = "Messaging components for job agent scrapper services"
requires-python = ">=3.9"
dependencies = [
    "job-scrapper-contracts @ git+https://github.com/job-agent/job-scrapper-contracts.git@main",
    "pika>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.10",
    "pre-commit>=4.0.1",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src", "smoke_tests"]
pythonpath = ["src"]
markers = [
    "smoke: marks tests as smoke tests (quick validation of package health)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

